--- a/anvil.yaml
+++ b/anvil.yaml
@@ -1,5 +1,13 @@
-name: Default2
-services: []
+package_name: Catch
+name: Catch
 startup_form: Form1
+renamed: true
 runtime_options: {server_version: python2-sandbox}
-package_name: Default2
+services:
+- source: /runtime/services/tables.yml
+  client_config: {}
+  server_config: {auto_create_missing_columns: false}
+- source: /runtime/services/anvil/users.yml
+  client_config: {allow_signup: true, enable_automatically: true, use_email: true,
+    confirm_email: false}
+  server_config: {user_table: 7129}
