--- a/anvil.yaml
+++ b/anvil.yaml
@@ -1,12 +1,12 @@
 package_name: Catch
 name: Catch
-startup_form: Form1
+startup_form: login
 renamed: true
 runtime_options: {server_version: python2-sandbox}
 services:
 - source: /runtime/services/tables.yml
   client_config: {}
-  server_config: {auto_create_missing_columns: false}
+  server_config: {auto_create_missing_columns: true}
 - source: /runtime/services/anvil/users.yml
   client_config: {allow_signup: true, enable_automatically: true, use_email: true,
     confirm_email: false}
