--- a/forms/ItemTemplate1.yaml
+++ b/forms/ItemTemplate1.yaml
@@ -1,18 +1,32 @@
 container:
   type: ColumnPanel
-  properties: {col_widths: '{}'}
+  properties: {col_widths: '{"DIYUTB":30,"EJUWKU":15,"RQQOHI":15}'}
 components:
 - type: Label
   properties: {}
-  name: label_1
-  layout_properties: {grid_position: 'CLYICX,ZDMDNE'}
+  name: recipient
+  layout_properties: {grid_position: 'CLYICX,DIYUTB'}
   data_bindings:
   - {property: text, code: 'self.item[''recipient'']'}
 - type: CheckBox
-  properties: {text: check_box_1}
+  properties: {role: null, width: default, align: left, border: '', enabled: true,
+    foreground: '', visible: true, text: 'Currently playing?', font_size: null, font: '',
+    spacing_above: small, spacing_below: small, italic: false, background: '', bold: false,
+    checked: false, underline: false}
   name: check_box_1
   layout_properties: {grid_position: 'CLYICX,EJUWKU'}
   data_bindings:
   - {property: checked, code: 'self.item[''game_ongoing'']', writeback: false}
   - {property: text, code: 'self.item[''initiator'']'}
+  event_bindings: {change: check_box_1_change}
+- type: CheckBox
+  properties: {role: null, width: default, align: left, border: '', enabled: true,
+    foreground: '', visible: true, text: 'You have ball?', font_size: null, font: '',
+    spacing_above: small, spacing_below: small, italic: false, background: '', bold: false,
+    checked: false, underline: false}
+  name: check_box_2
+  layout_properties: {grid_position: 'CLYICX,RQQOHI'}
+  event_bindings: {change: check_box_2_change}
+  data_bindings:
+  - {property: checked, code: 'self.item[''initiator_has_ball'']', writeback: true}
 item_type: {table_id: 7128}
