--- a/forms/game_list.yaml
+++ b/forms/game_list.yaml
@@ -14,7 +14,7 @@ components:
   name: drop_down_1
   layout_properties: {grid_position: 'FTSUIW,YZWUTG'}
   data_bindings:
-  - {property: selected_value, code: 'self.item[''recipient'']', writeback: true}
+  - {property: items, code: 'self.item[''recipient'']'}
 - type: ColumnPanel
   properties: {col_widths: '{}'}
   name: column_panel_1
