--- a/forms/Login.yaml
+++ b/forms/Login.yaml
@@ -1,16 +1,13 @@
 container:
   type: ColumnPanel
   properties: {role: null, width: default, border: '', foreground: '', visible: true,
-    row_spacing: 10, wrap_on: mobile, spacing_above: none, col_widths: '{"HZRNRF":20,"CESBNI":36,"FUODXR":20}',
+    row_spacing: 10, wrap_on: mobile, spacing_above: none, col_widths: '{"HZRNRF":20,"CESBNI":36}',
     spacing_below: small, background: ''}
 components:
-- type: Label
-  properties: {role: null, width: default, align: left, border: '', foreground: '',
-    visible: true, text: CATCH, font_size: null, font: '', spacing_above: small, icon_align: left,
-    spacing_below: large, italic: false, background: '', bold: true, underline: false,
-    icon: ''}
-  name: title
-  layout_properties: {grid_position: 'YPSJMW,XTMKIV'}
+- type: ColumnPanel
+  properties: {}
+  name: title_panel
+  layout_properties: {grid_position: 'JPNRLE,PNYQVO'}
 - type: Label
   properties: {role: null, width: default, align: left, border: '', foreground: '',
     visible: true, text: 'Login (or create account):', font_size: null, font: '',
@@ -88,11 +85,23 @@ components:
   name: new_account
   layout_properties: {grid_position: 'WOJWGW,RSJQPH'}
   event_bindings: {change: new_account_change}
+- type: Spacer
+  properties: {height: 32}
+  name: spacer_1
+  layout_properties: {grid_position: 'PLFSLD,PDESDO'}
 - type: Button
   properties: {role: null, width: default, align: center, border: '', enabled: true,
     foreground: '', visible: true, text: Log in, font_size: null, font: '', spacing_above: medium,
     icon_align: left, spacing_below: medium, italic: false, background: '', bold: true,
     underline: false, icon: ''}
   name: go_button
-  layout_properties: {grid_position: 'NUNROS,WATBUW', row_background: green}
-  event_bindings: {click: go}
+  layout_properties: {grid_position: 'NUNROS,WATBUW', row_background: ''}
+  event_bindings: {click: go, hide: go_button_hide}
+- type: Button
+  properties: {role: null, width: default, align: center, border: '', enabled: true,
+    foreground: '', visible: false, text: Proceed to games, font_size: null, font: '',
+    spacing_above: small, icon_align: left, spacing_below: small, italic: false, background: '',
+    bold: true, underline: false, icon: ''}
+  name: button_1
+  layout_properties: {grid_position: 'WEWBFZ,GEKADR'}
+  event_bindings: {click: button_1_click}
