--- a/forms/AddContacts.yaml
+++ b/forms/AddContacts.yaml
@@ -15,14 +15,14 @@ components:
   layout_properties: {grid_position: 'OROBJO,FQBFZF'}
 - type: Label
   properties: {role: null, width: default, align: left, border: '', foreground: '',
-    visible: true, text: 'Phone number:', font_size: null, font: '', spacing_above: small,
+    visible: true, text: 'Phone number:', font_size: null, font: '', spacing_above: none,
     icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
     underline: false, icon: ''}
   name: label_phone
   layout_properties: {grid_position: 'POHKFA,HZRNRF SJFJRO,LYGERS'}
 - type: Button
   properties: {role: null, width: default, align: left, border: '', enabled: true,
-    foreground: '', visible: true, text: 'Why do you need this?', font_size: 10, font: '',
+    foreground: '', visible: true, text: 'Why do we need this?', font_size: 10, font: '',
     spacing_above: small, icon_align: left, spacing_below: medium, italic: true, background: '',
     bold: false, underline: false, icon: ''}
   name: why_phone
@@ -31,20 +31,20 @@ components:
 - type: TextBox
   properties: {role: null, width: default, align: left, hide_text: false, placeholder: '1234567890',
     border: '', enabled: true, foreground: '', visible: true, text: '', font_size: null,
-    font: '', spacing_above: small, type: telephone, spacing_below: small, italic: false,
+    font: '', spacing_above: none, type: telephone, spacing_below: small, italic: false,
     background: '', bold: false, underline: false}
   name: phone
   layout_properties: {grid_position: 'POHKFA,GVXPJM'}
 - type: Button
   properties: {role: null, width: default, align: center, border: '', enabled: true,
-    foreground: '', visible: true, text: Add Contact, font_size: null, font: '', spacing_above: small,
+    foreground: '', visible: true, text: Add Contact, font_size: null, font: '', spacing_above: none,
     icon_align: left, spacing_below: small, italic: false, background: '', bold: true,
     underline: false, icon: ''}
   name: go_button
   layout_properties: {grid_position: 'POHKFA,PHDVEA', row_background: ''}
   event_bindings: {click: add_connection}
 - type: Spacer
-  properties: {height: 77}
+  properties: {height: 62}
   name: spacer_1
   layout_properties: {grid_position: 'CCWNOV,UPTLIF'}
 - type: Label
