--- a/forms/GameGrid.yaml
+++ b/forms/GameGrid.yaml
@@ -1,7 +1,7 @@
 container:
   type: ColumnPanel
   properties: {role: null, width: default, border: 'True', foreground: '', visible: true,
-    row_spacing: 10, wrap_on: mobile, spacing_above: small, col_widths: '{"VYFOJZ":6,"ZIBOSR":11,"DIYUTB":43}',
+    row_spacing: 10, wrap_on: mobile, spacing_above: small, col_widths: '{"VYFOJZ":5,"ZIBOSR":12,"DIYUTB":43}',
     spacing_below: small, background: ''}
 components:
 - type: Label
@@ -31,7 +31,7 @@ components:
   properties: {role: null, selected: false, width: default, align: left, border: '',
     enabled: false, foreground: '', value: '', visible: true, text: You have ball,
     font_size: null, font: '', spacing_above: none, spacing_below: none, italic: false,
-    background: '', bold: false, group_name: radioGroup1, underline: false}
+    background: '', bold: false, group_name: '', underline: false}
   name: player_ball
   layout_properties: {grid_position: 'RUFVXB,SZECZQ'}
   data_bindings:
@@ -40,9 +40,9 @@ components:
   properties: {role: null, selected: false, width: default, align: right, border: '',
     enabled: false, foreground: '', value: '', visible: true, text: Friend has ball,
     font_size: null, font: '', spacing_above: none, spacing_below: none, italic: false,
-    background: '', bold: false, group_name: radioGroup1, underline: false}
+    background: '', bold: false, group_name: '', underline: false}
   name: friend_ball
-  layout_properties: {grid_position: 'RUFVXB,YETKAB'}
+  layout_properties: {grid_position: 'RUFVXB,PUTLJR'}
   data_bindings:
   - {property: selected, code: 'self.item[''dual''][''initiator_has_ball'']'}
 - type: Button
