--- a/forms/Title.yaml
+++ b/forms/Title.yaml
@@ -10,9 +10,9 @@ components:
   layout_properties: {grid_position: 'SKIEKS,LRZXEF'}
 - type: Label
   properties: {role: null, width: default, align: right, border: '', foreground: '',
-    visible: true, text: the game of throwing a ball back and forth, font_size: null,
-    font: '', spacing_above: large, icon_align: left, spacing_below: small, italic: true,
-    background: '', bold: false, underline: false, icon: ''}
+    visible: true, text: the ball-throwing game, font_size: null, font: '', spacing_above: large,
+    icon_align: left, spacing_below: small, italic: true, background: '', bold: false,
+    underline: false, icon: ''}
   name: label_1
   layout_properties: {grid_position: 'SKIEKS,JRCLHF'}
 - type: Spacer
