--- a/forms/AddContacts.yaml
+++ b/forms/AddContacts.yaml
@@ -8,15 +8,23 @@ components:
     visible: true, text: 'Placeholder for importing contacts from phone
 
 
-      Add a contact:', font_size: null, font: '', spacing_above: large, icon_align: left,
+      Add a contact:', font_size: null, font: '', spacing_above: medium, icon_align: left,
     spacing_below: large, italic: false, background: '', bold: false, underline: false,
     icon: ''}
   name: label_get_contacts
-  layout_properties: {grid_position: 'OROBJO,FQBFZF'}
+  layout_properties: {grid_position: 'OROBJO,DMOCEV'}
+- type: Button
+  properties: {role: null, width: default, align: center, border: '', enabled: true,
+    foreground: '', visible: true, text: List view w/o contact tools, font_size: null,
+    font: '', spacing_above: large, icon_align: left, spacing_below: small, italic: false,
+    background: '', bold: false, underline: false, icon: ''}
+  name: button_1
+  layout_properties: {grid_position: 'OROBJO,UJTYVK'}
+  event_bindings: {click: button_1_click}
 - type: Label
   properties: {role: null, width: default, align: left, border: '', foreground: '',
     visible: true, text: 'Phone number:', font_size: null, font: '', spacing_above: none,
-    icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
+    icon_align: left, spacing_below: none, italic: false, background: '', bold: false,
     underline: false, icon: ''}
   name: label_phone
   layout_properties: {grid_position: 'POHKFA,HZRNRF SJFJRO,LYGERS'}
