--- a/forms/AddContacts.yaml
+++ b/forms/AddContacts.yaml
@@ -15,7 +15,7 @@ components:
   layout_properties: {grid_position: 'OROBJO,DMOCEV'}
 - type: Button
   properties: {role: null, width: default, align: center, border: '', enabled: true,
-    foreground: '', visible: true, text: List view w/o contact tools, font_size: null,
+    foreground: '', visible: true, text: (go to view w/o contact tools), font_size: null,
     font: '', spacing_above: large, icon_align: left, spacing_below: small, italic: false,
     background: '', bold: false, underline: false, icon: ''}
   name: button_1
@@ -66,6 +66,10 @@ components:
   properties: {}
   name: game_panel
   layout_properties: {grid_position: 'TWGCNQ,FIMOZF'}
+- type: Timer
+  properties: {interval: 10}
+  name: timer_1
+  event_bindings: {tick: timer_1_tick}
 container:
   type: ColumnPanel
   properties: {role: null, width: default, border: '', foreground: '', visible: true,
