--- a/forms/GameGrid.yaml
+++ b/forms/GameGrid.yaml
@@ -1,21 +1,12 @@
 container:
   type: ColumnPanel
   properties: {role: null, width: default, border: 'True', foreground: '', visible: true,
-    row_spacing: 10, wrap_on: mobile, spacing_above: small, col_widths: '{"VYFOJZ":10,"ZIBOSR":10,"DIYUTB":25,"EBHLET":15}',
+    row_spacing: 10, wrap_on: mobile, spacing_above: small, col_widths: '{"ZIBOSR":11,"ICOQUP":29,"EBHLET":20}',
     spacing_below: small, background: ''}
 components:
 - type: Label
   properties: {role: null, width: default, align: left, border: '', foreground: '',
-    visible: true, text: Ongoing, font_size: null, font: '', spacing_above: small,
-    icon_align: left, spacing_below: small, italic: false, background: '', bold: true,
-    underline: false, icon: ''}
-  name: label_ongoing
-  layout_properties: {grid_position: 'CLYICX,VYFOJZ'}
-  data_bindings:
-  - {property: visible, code: 'self.item[''game_ongoing'']'}
-- type: Label
-  properties: {role: null, width: default, align: left, border: '', foreground: '',
-    visible: true, text: 'game with:', font_size: null, font: '', spacing_above: small,
+    visible: true, text: 'Game with:', font_size: null, font: '', spacing_above: small,
     icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
     underline: false, icon: ''}
   name: label_1
@@ -25,7 +16,7 @@ components:
 - type: Label
   properties: {}
   name: friend_label
-  layout_properties: {grid_position: 'CLYICX,DIYUTB'}
+  layout_properties: {grid_position: 'CLYICX,ICOQUP'}
   data_bindings: []
 - type: Button
   properties: {role: null, width: default, align: right, border: '', enabled: true,
