--- a/forms/Login.yaml
+++ b/forms/Login.yaml
@@ -77,11 +77,23 @@ components:
     background: '', bold: false, underline: false}
   name: user_name
   layout_properties: {grid_position: 'WAOBWA,QDVUDW'}
+- type: Spacer
+  properties: {height: 32}
+  name: spacer_2
+  layout_properties: {grid_position: 'ZBCZAB,HUWQWR', row_background: ''}
+- type: Button
+  properties: {role: null, width: default, align: center, border: '', enabled: true,
+    foreground: '', visible: true, text: Log in, font_size: null, font: '', spacing_above: medium,
+    icon_align: left, spacing_below: medium, italic: false, background: '', bold: true,
+    underline: false, icon: ''}
+  name: go_button
+  layout_properties: {grid_position: 'ZBCZAB,VSBJRI', row_background: ''}
+  event_bindings: {click: go, hide: go_button_hide}
 - type: CheckBox
   properties: {role: null, width: default, align: left, border: '', enabled: true,
-    foreground: '', visible: true, text: 'Make a new account?', font_size: null, font: '',
-    spacing_above: small, spacing_below: small, italic: false, background: '', bold: false,
-    checked: false, underline: false}
+    foreground: '', visible: true, text: 'Create a new account?', font_size: null,
+    font: '', spacing_above: small, spacing_below: small, italic: false, background: '',
+    bold: false, checked: false, underline: false}
   name: new_account
   layout_properties: {grid_position: 'WOJWGW,RSJQPH'}
   event_bindings: {change: new_account_change}
@@ -89,14 +101,6 @@ components:
   properties: {height: 32}
   name: spacer_1
   layout_properties: {grid_position: 'PLFSLD,PDESDO'}
-- type: Button
-  properties: {role: null, width: default, align: center, border: '', enabled: true,
-    foreground: '', visible: true, text: Log in, font_size: null, font: '', spacing_above: medium,
-    icon_align: left, spacing_below: medium, italic: false, background: '', bold: true,
-    underline: false, icon: ''}
-  name: go_button
-  layout_properties: {grid_position: 'NUNROS,WATBUW', row_background: ''}
-  event_bindings: {click: go, hide: go_button_hide}
 - type: Button
   properties: {role: null, width: default, align: center, border: '', enabled: true,
     foreground: '', visible: false, text: Proceed to games, font_size: null, font: '',
