--- a/forms/Login.yaml
+++ b/forms/Login.yaml
@@ -32,9 +32,9 @@ components:
   event_bindings: {click: explain_phone}
 - type: TextBox
   properties: {role: null, width: default, align: left, hide_text: false, placeholder: '1234567890',
-    border: '', enabled: true, foreground: '', visible: true, text: '', font_size: null,
-    font: '', spacing_above: small, type: telephone, spacing_below: small, italic: false,
-    background: '', bold: false, underline: false}
+    border: '', enabled: true, foreground: '', visible: true, text: 555-555-5555,
+    font_size: null, font: '', spacing_above: small, type: telephone, spacing_below: small,
+    italic: false, background: '', bold: false, underline: false}
   name: phone
   layout_properties: {grid_position: 'KWIYLI,OXHEKA'}
 - type: Label
@@ -45,7 +45,10 @@ components:
   name: label_password
   layout_properties: {grid_position: 'POHKFA,HZRNRF'}
 - type: TextBox
-  properties: {}
+  properties: {role: null, width: default, align: left, hide_text: false, placeholder: '',
+    border: '', enabled: true, foreground: '', visible: true, text: password, font_size: null,
+    font: '', spacing_above: small, type: text, spacing_below: small, italic: false,
+    background: '', bold: false, underline: false}
   name: password
   layout_properties: {grid_position: 'POHKFA,CFTXOE'}
   event_bindings: {pressed_enter: text_box_2_pressed_enter}
