--- a/forms/Login.yaml
+++ b/forms/Login.yaml
@@ -51,7 +51,7 @@ components:
     background: '', bold: false, underline: false}
   name: password
   layout_properties: {grid_position: 'POHKFA,CFTXOE'}
-  event_bindings: {pressed_enter: text_box_2_pressed_enter}
+  event_bindings: {pressed_enter: go}
 - type: Label
   properties: {role: null, width: default, align: left, border: '', foreground: '',
     visible: false, text: 'Confirm password:', font_size: null, font: '', spacing_above: small,
@@ -80,6 +80,7 @@ components:
     background: '', bold: false, underline: false}
   name: user_name
   layout_properties: {grid_position: 'WAOBWA,QDVUDW'}
+  event_bindings: {pressed_enter: go}
 - type: Spacer
   properties: {height: 32}
   name: spacer_2
