--- a/forms/ConfirmAccount.yaml
+++ b/forms/ConfirmAccount.yaml
@@ -10,6 +10,18 @@ components:
     italic: false, background: '', bold: false, underline: false, icon: ''}
   name: label_confirm_screen
   layout_properties: {grid_position: 'UMRMIX,XBYIIT'}
+- type: Button
+  properties: {role: null, width: default, align: left, border: '', enabled: true,
+    foreground: '', visible: true, text: resend confirmation text, font_size: null,
+    font: '', spacing_above: small, icon_align: left, spacing_below: small, italic: false,
+    background: '', bold: false, underline: false, icon: ''}
+  name: resend_button
+  layout_properties: {grid_position: 'EMOOSP,EIBTHE'}
+  event_bindings: {click: resend_button_click}
+- type: Spacer
+  properties: {height: 32}
+  name: spacer_1
+  layout_properties: {grid_position: 'GTSZNP,MJYEBQ'}
 - type: Label
   properties: {role: null, width: default, align: left, border: '', foreground: '',
     visible: true, text: 'Confirmation code from SMS:', font_size: null, font: '',
