--- a/forms/AddContacts.yaml
+++ b/forms/AddContacts.yaml
@@ -65,7 +65,7 @@ components:
   layout_properties: {grid_position: 'KYOGWU,WGMSYO'}
 - type: ColumnPanel
   properties: {}
-  name: game_panel
+  name: game_list_panel
   layout_properties: {grid_position: 'TWGCNQ,FIMOZF'}
 - type: Timer
   properties: {interval: 10}
