--- a/forms/PlayCatch.yaml
+++ b/forms/PlayCatch.yaml
@@ -58,17 +58,9 @@ components:
   layout_properties: {grid_position: 'WRNSTQ,DOPAKG'}
 - type: Button
   properties: {role: null, width: default, align: center, border: '', enabled: true,
-    foreground: '', visible: true, text: back to list, font_size: null, font: '',
-    spacing_above: small, icon_align: left, spacing_below: small, italic: false, background: '',
-    bold: false, underline: false, icon: ''}
-  name: game_list
-  layout_properties: {grid_position: 'WRNSTQ,YZPSBN'}
-  event_bindings: {click: button_2_click}
-- type: Button
-  properties: {role: null, width: default, align: center, border: '', enabled: true,
-    foreground: '', visible: true, text: add friends, font_size: null, font: '', spacing_above: small,
-    icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
-    underline: false, icon: ''}
+    foreground: '', visible: true, text: game list / add friends, font_size: null,
+    font: '', spacing_above: small, icon_align: left, spacing_below: small, italic: false,
+    background: '', bold: false, underline: false, icon: ''}
   name: add_contacts
   layout_properties: {grid_position: 'WRNSTQ,EBREJJ'}
   event_bindings: {click: add_contacts_click}
