--- a/forms/PlayCatch.yaml
+++ b/forms/PlayCatch.yaml
@@ -2,6 +2,10 @@ container:
   type: ColumnPanel
   properties: {col_widths: '{"MUZYMN":10,"YRAZOJ":20,"CTMSFR":20,"SRGNIM":10}'}
 components:
+- type: ColumnPanel
+  properties: {}
+  name: column_panel_1
+  layout_properties: {grid_position: 'NQVCGY,GJZERQ'}
 - type: Canvas
   properties: {role: null, width: default, height: 479, border: '', foreground: '',
     visible: true, spacing_above: small, spacing_below: small, background: '#a5d3e3'}
