--- a/anvil.yaml
+++ b/anvil.yaml
@@ -16,7 +16,7 @@ runtime_options: {server_version: python3-full}
 services:
 - source: /runtime/services/tables.yml
   client_config: {}
-  server_config: {auto_create_missing_columns: true}
+  server_config: {auto_create_missing_columns: false}
 - source: /runtime/services/anvil/users.yml
   client_config: {allow_signup: true, enable_automatically: false, use_email: false,
     confirm_email: false}
